--- a/index.html
+++ b/index.html
@@ -642,6 +642,74 @@
             }
         }
 
+
+        /* Приветственный блок */
+        .welcome-card {
+            background-color: var(--bg-secondary);
+            border-radius: var(--border-radius-lg);
+            padding: 1.5rem;
+            border: 1px solid var(--border-color);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        }
+
+        .welcome-title {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            color: var(--text-primary);
+        }
+
+        .welcome-text {
+            color: var(--text-secondary);
+            line-height: 1.6;
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1.5rem;
+            margin-top: 1.5rem;
+        }
+
+        .feature-item {
+            background-color: rgba(232, 30, 63, 0.1);
+            border-radius: var(--border-radius-sm);
+            padding: 1rem;
+            text-align: center;
+            border: 1px solid rgba(232, 30, 63, 0.2);
+            transition: all var(--transition-duration) ease;
+            cursor: pointer;
+        }
+
+        .feature-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 5px 15px rgba(232, 30, 63, 0.3);
+        }
+
+        .feature-icon {
+            color: var(--accent-red);
+            font-size: 1.5rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .feature-text {
+            color: var(--text-secondary);
+            font-size: 0.9rem;
+        }
+
+        .mobile-search-btn {
+            position: absolute;
+            right: 5px;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 30px;
+            width: 30px;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 8px;
+        }
+
         /* Адаптивность */
         @media (max-width: 1200px) {
             .main-container {
@@ -747,6 +815,34 @@
             .section-title {
                 font-size: 1rem;
             }
+
+            .servers-grid {
+                grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+                gap: 1rem;
+                margin-block: 1rem;
+            }
+
+            .server-header {
+                justify-content: center;
+                margin-bottom: 0.5rem;
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+
+            .online-count {
+                text-align: center;
+            }
+
+            .features-grid {
+                grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+                gap: 1rem;
+                margin-top: 1rem;
+            }
+
+            .feature-item {
+                padding: 1rem;
+                align-content: center;
+            }
         }
 
         /* Анимации */
@@ -807,73 +903,6 @@
 
         .sidebar-overlay.active {
             display: block;
-        }
-
-        /* Приветственный блок */
-        .welcome-card {
-            background-color: var(--bg-secondary);
-            border-radius: var(--border-radius-lg);
-            padding: 1.5rem;
-            border: 1px solid var(--border-color);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
-
-        .welcome-title {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-            color: var(--text-primary);
-        }
-
-        .welcome-text {
-            color: var(--text-secondary);
-            line-height: 1.6;
-        }
-
-        .features-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1.5rem;
-            margin-top: 1.5rem;
-        }
-
-        .feature-item {
-            background-color: rgba(232, 30, 63, 0.1);
-            border-radius: var(--border-radius-sm);
-            padding: 1rem;
-            text-align: center;
-            border: 1px solid rgba(232, 30, 63, 0.2);
-            transition: all var(--transition-duration) ease;
-            cursor: pointer;
-        }
-
-        .feature-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(232, 30, 63, 0.3);
-        }
-
-        .feature-icon {
-            color: var(--accent-red);
-            font-size: 1.5rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .feature-text {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
-        }
-
-        .mobile-search-btn {
-            position: absolute;
-            right: 5px;
-            top: 50%;
-            transform: translateY(-50%);
-            height: 30px;
-            width: 30px;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            border-radius: 8px;
         }
     </style>
 </head>
@@ -1081,7 +1110,7 @@
                         <!-- Сервер 1 -->
                         <div class="server-card">
                             <div class="server-header">
-                                <div class="server-name">Малиновка #1</div>
+                                <div class="server-name">Сервер #1</div>
                                 <div class="server-status">
                                     <span class="status-dot online online-pulse"></span>
                                     <span>ОНЛАЙН</span>
@@ -1093,7 +1122,7 @@
                         <!-- Сервер 2 -->
                         <div class="server-card">
                             <div class="server-header">
-                                <div class="server-name">Малиновка #2</div>
+                                <div class="server-name">Сервер #2</div>
                                 <div class="server-status">
                                     <span class="status-dot online online-pulse"></span>
                                     <span>ОНЛАЙН</span>
@@ -1105,7 +1134,7 @@
                         <!-- Сервер 3 -->
                         <div class="server-card">
                             <div class="server-header">
-                                <div class="server-name">Малиновка #3</div>
+                                <div class="server-name">Сервер #3</div>
                                 <div class="server-status">
                                     <span class="status-dot online online-pulse"></span>
                                     <span>ОНЛАЙН</span>
@@ -1117,7 +1146,7 @@
                         <!-- Сервер 4 -->
                         <div class="server-card">
                             <div class="server-header">
-                                <div class="server-name">Малиновка #4</div>
+                                <div class="server-name">Сервер #4</div>
                                 <div class="server-status">
                                     <span class="status-dot online online-pulse"></span>
                                     <span>ОНЛАЙН</span>
