--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MalWiki - Вики по игре Малиновка</title>
+    <title>MalCoin Wiki - Вики по игре Малиновка</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <style>
         :root {
@@ -915,7 +915,7 @@
         <div class="header-container">
             <div class="logo">
                 <img class="logo-icon" src="mwlogo.png">
-                <span class="logo-text desktop-only">MalWiki</span>
+                <span class="logo-text desktop-only">MalCoin Wiki</span>
             </div>
             <div class="search-container">
                 <div class="search-box">
@@ -1095,7 +1095,7 @@
             <div class="page-content active" id="home-page">
                 <!-- Приветственный блок -->
                 <div class="welcome-card">
-                    <h1 class="welcome-title">Добро пожаловать в MalWiki!</h1>
+                    <h1 class="welcome-title">Добро пожаловать в MalCoin Wiki!</h1>
                     <p class="welcome-text">Фанатская вики-энциклопедия по CRMP игре "Малиновка". Здесь вы найдете
                         подробную информацию об игровых механиках, занятиях, имуществе, показателях персонажа и многом
                         другом.</p>
@@ -1190,13 +1190,13 @@
             <div id="articles-container"></div>
             <footer>
                 <div class="footer-container">
-                    <div class="footer-logo">MalWiki</div>
+                    <div class="footer-logo">MalCoin Wiki</div>
                     <p class="footer-disclaimer">
                         Все материалы сайта являются фантазией и относятся исключительно к игровому процессу.
                         Администрация не
                         поддерживает и не пропагандирует противоправные действия в реальной жизни.
                     </p>
-                    <div>© 2026 MalWiki. Все права защищены.</div>
+                    <div>© 2026 MalCoin Wiki. Все права защищены.</div>
                 </div>
             </footer>
         </main>
