--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
+            -webkit-tap-highlight-color: transparent;
         }
 
         ::-webkit-scrollbar {
@@ -98,6 +99,7 @@
             gap: 12px;
             font-size: 1.8rem;
             font-weight: 700;
+            text-decoration: none;
         }
 
         .logo-text {
@@ -913,10 +915,10 @@
     <!-- Хедер -->
     <header>
         <div class="header-container">
-            <div class="logo">
+            <a class="logo" href="/index.html">
                 <img class="logo-icon" src="mwlogo.png">
                 <span class="logo-text desktop-only">MalCoin Wiki</span>
-            </div>
+            </a>
             <div class="search-container">
                 <div class="search-box">
                     <i class="bi bi-search search-icon"></i>
