--- a/index.html
+++ b/index.html
@@ -751,6 +751,12 @@
             }
         }
 
+        @media (max-width: 950px) {
+            .features-grid {
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            }
+        }
+
         @media (max-width: 893px) {
             .servers-grid {
                 grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
